--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="assets/css/style.css">
-	<link rel="stylesheet" href="assets/css/all.css">
-	<script src="assets/js/all.min.js"></script>
-	<script src="assets/js/main.js"></script>
-	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<meta name="viewport" content="maximum-scale=1, user-scalable=no"/>
 	<title>DeniedSoft</title>
+	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/typing.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 </head>
 
 <header class="header">
@@ -17,7 +19,8 @@
 			<a class="header_logo" href="#">DeniedSoft</a>
 					
 			<script>
-			    document.querySelector(".header_logo").addEventListener("click", function(e) {
+			    document.querySelector(".header_logo").addEventListener("click", function(e)
+			    {
 			        e.preventDefault();
 			        history.replaceState(null, null, ' ');
 			        window.scrollTo(0, 0);
@@ -36,11 +39,13 @@
 <div class="intro">
 	<div class="container">
 		<div class="intro__inner">
+			<a href="https://github.com/DeniedAccessLife"><div class="fab fa-github github__icon"></div></a>
 			<h1 class="intro__title">DeniedSoft</h1>
-			<h2 class="intro__subtitle">greatness is coming.</h2>
+			<h2 class="intro__subtitle"></h2>
 		</div>
 	</div>
 </div>
+
 
 <section class="section" id="services">
 	<div class="container">
@@ -54,7 +59,7 @@
 
 				<div class="services__title">Universal</div>
 
-				<div class="services__text">Разработка и настройка программного обеспечения производится под систему пользователя.</div>
+				<div class="services__text">The software is tailored to your system, ensuring optimal performance.</div>
 			</div>
 
 			<div class="services__item">
@@ -62,7 +67,7 @@
 
 				<div class="services__title">Flexible</div>
 
-				<div class="services__text">Разработка программного обеспечения в соответствии с требованиями и предпочтениями пользователя.</div>
+				<div class="services__text">We develop software that aligns with your specific needs and preferences.</div>
 			</div>
 		</div>
 
@@ -74,7 +79,7 @@
 
 				<div class="services__title">Comfort</div>
 
-				<div class="services__text">Простейший интерфейс который сможет понять даже неопытный пользователь.</div>
+				<div class="services__text">Our software features a user-friendly interface, even for beginners.</div>
 			</div>
 
 			<div class="services__item">
@@ -82,7 +87,7 @@
 
 				<div class="services__title">Secure</div>
 
-				<div class="services__text">Программное обеспечение не содержит вредоносный код в себе.</div>
+				<div class="services__text">Our software is free from harmful code, ensuring your safety.</div>
 			</div>
 		</div>
 
@@ -94,7 +99,7 @@
 
 				<div class="services__title">Design</div>
 
-				<div class="services__text">Программное обеспечение удовлетворяет запросам фирменного и стильного дизайна. </div>
+				<div class="services__text">Our software adheres to corporate and stylish design standards.</div>
 			</div>
 
 			<div class="services__item">
@@ -102,7 +107,7 @@
 
 				<div class="services__title">Personal</div>
 
-				<div class="services__text">Программное обеспечение не производит сбор данных пользователя.</div>
+				<div class="services__text">We respect your privacy and do not collect your personal data.</div>
 			</div>
 
 		</div>
@@ -120,56 +125,55 @@
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">Какие версии Windows поддерживает програмное обеспечение?</div>
+							<div class="accordion__title">Which versions of Windows does the software support?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">Программное обеспечение поддерживает все версии операционной системы, включая поддержку Windows XP при желании.</div>
+						<div class="accordion__content">The software supports all modern versions of the operating system, including support for Windows XP if requested.</div>
 					</div>
 				</div>
-
 
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">Возможно ли решение проблем с программным обеспечением?</div>
+							<div class="accordion__title">Are possible to solve software problems?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">В случае возникновения проблем с программным обеспечением техническая поддержка поможет решить проблему в кротчайшие сроки.</div>
+						<div class="accordion__content">In case of any issues with the software, our technical support team is ready to assist in resolving the problem as swiftly as possible.</div>
 					</div>
 				</div>
 				
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">Какую архитектуру поддерживает програмное обеспечение?</div>
+							<div class="accordion__title">What processor architecture does the software support?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">Программное обеспечение поддерживает все разрядности процессоров.</div>
+						<div class="accordion__content">The software is designed to support all processor architectures, ensuring optimal performance across different systems.</div>
 					</div>
 				</div>
 
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">Как быстро осуществляется разработка программного обеспечения?</div>
+							<div class="accordion__title">How fast will software development progress?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">Выполнение заказа осуществится по мере поступления заказа, в обговоренные сроки.</div>
+						<div class="accordion__content">We prioritize efficiency in our software development process. As soon as we receive your order, we work diligently to deliver the software within the agreed-upon timeline.</div>
 					</div>
 				</div>
 
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">Возможно ли последующее обновление программного обеспечения?</div>
+							<div class="accordion__title">Are possible to anticipate and implement future software updates?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">Последующее обновление программного обеспечения возможно, путем договорности с поддрежкой.</div>
+						<div class="accordion__content">Yes, we offer regular software updates and patches. These updates are subject to agreement with our support team.</div>
 					</div>
 				</div>
 			</div>
@@ -185,39 +189,39 @@
 		
 		<div class="products">
 			<div class="products__item">
-				<div class="fas fas fa-save products__icon"></div>
+				<div class="fas fa-dollar-sign products__icon"></div>
 
-				<div class="products__title">Installer</div>
+				<a href="https://github.com/DeniedAccessLife/SteamPrices"><div class="products__title">SteamPrices</div></a>
 
-				<div class="products__text">Создание установщика для вашего программного обеспечения.</div>
+				<div class="products__text">Program for getting current prices for Steam items.</div>
 			</div>
 
 			<div class="products__item">
-				<div class="fas fa-file-code products__icon"></div>
+				<div class="fas fa-yen-sign products__icon"></div>
 
-				<div class="products__title">Development</div>
+				<a href="https://github.com/DeniedAccessLife/Buff163Prices"><div class="products__title">Buff163Prices</div></a>
 
-				<div class="products__text">Разработка программного обеспечения на заказ пользователя.</div>
+				<div class="products__text">Program for getting current prices for Buff163 items.</div>
 			</div>
 		</div>
 
 		<hr>
 
 		<div class="products">
+			<div class="products__item">
+				<div class="fas fa-comment products__icon"></div>
+
+				<a href="https://github.com/DeniedAccessLife/DynamicStatus"><div class="products__title">DynamicStatus</div></a>
+
+				<div class="products__text">Program for dynamic changing the status in VKontakte.</div>
+			</div>
+
 			<div class="products__item">
 				<div class="fas fa-shield-alt products__icon"></div>
 
-				<div class="products__title">Protection</div>
+				<a href="https://github.com/DeniedAccessLife/Blocker"><div class="products__title">Blocker</div></a>
 
-				<div class="products__text">Защита программного обеспечения написанного на .NET Framework.</div>
-			</div>
-
-			<div class="products__item">
-				<div class="fas fa-vial products__icon"></div>
-
-				<div class="products__title">Testing</div>
-
-				<div class="products__text">Проведение тщательного тестирования программного обеспечения для обнаружения, исправления ошибок и уязвимостей.</div>
+				<div class="products__text">Program for blocking, unblocking websites by using the hosts file.</div>
 			</div>
 		</div>
 
@@ -225,19 +229,19 @@
 
 		<div class="products">
 			<div class="products__item">
-				<div class="far fa-clock products__icon"></div>
+				<div class="fas fa-keyboard products__icon"></div>
 
-				<div class="products__title">Working</div>
+				<a href="https://github.com/DeniedAccessLife/KeyStrokes"><div class="products__title">KeyStrokes</div></a>
 
-				<div class="products__text">Данный пункт на текущий момент не заполнен. Позже здесь появиться что-то.</div>
+				<div class="products__text">Program for visualizing the keys pressed by the user during the game.</div>
 			</div>
 
 			<div class="products__item">
-				<div class="far fa-clock products__icon"></div>
+				<div class="fas fa-image products__icon"></div>
 
-				<div class="products__title">Working</div>
+				<a href="https://github.com/DeniedAccessLife/ScreenshotTool"><div class="products__title">ScreenshotTool</div></a>
 
-				<div class="products__text">Данный пункт на текущий момент не заполнен. Позже здесь появиться что-то.</div>
+				<div class="products__text">Program for capturing minimalistic screenshots.</div>
 			</div>
 		</div>
 	</div>
