--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="maximum-scale=1, user-scalable=no"/>
-	<title>DeniedSoft</title>
+	<title>Word Chain Writers</title>
 	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 <header class="header">
 	<div class="container">
 		<div class="header_inner">
-			<a class="header_logo" href="#">DeniedSoft</a>
+			<a class="header_logo" href="#">Word Chain</a>
 					
 			<script>
 			    document.querySelector(".header_logo").addEventListener("click", function(e)
@@ -39,9 +39,12 @@
 <div class="intro">
 	<div class="container">
 		<div class="intro__inner">
-			<a href="https://github.com/DeniedAccessLife"><div class="fab fa-github github__icon"></div></a>
-			<h1 class="intro__title">DeniedSoft</h1>
-			<h2 class="intro__subtitle"></h2>
+			<a href="https://wa.link/whu3du">
+  <img src="assets/img/WCW.ico" alt="word chain content writers" >
+</a>
+
+			<h1 class="intro__title">Word Chain</h1>
+			<h2 class="Professional Content Writers"></h2>
 		</div>
 	</div>
 </div>
