--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </a>
 
 			<h1 class="intro__title">Word Chain</h1>
-			<h2 class="intro__Subtitle"> Professional Content Writers></h2>
+			<h2 class="intro__subtitle"> Professional Content Writers </h2>
 		</div>
 	</div>
 </div>
