--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
 <section class="section" id="services">
 	<div class="container">
 		<div class="section__header">
-			<h2 class="section__title">Services</h2>
+			<h2 class="section__title">Our Features</h2>
 		</div>
 
 		<div class="services">
 			<div class="services__item">
 				<div class="fas fa-bolt services__icon"></div>
 
-				<div class="services__title">Universal</div>
+				<div class="services__title">Fast Turnaround Time</div>
 
-				<div class="services__text">The software is tailored to your system, ensuring optimal performance.</div>
+				<div class="services__text">We understand the importance of timely delivery, which is why we pride ourselves on our quick turnaround times. Whether you need a single blog post or a comprehensive content strategy, we'll work efficiently to meet your deadlines without compromising on quality.</div>
 			</div>
 
 			<div class="services__item">
 				<div class="fas fa-adjust services__icon"></div>
 
-				<div class="services__title">Flexible</div>
+				<div class="services__title">High-Quality Research</div>
 
-				<div class="services__text">We develop software that aligns with your specific needs and preferences.</div>
+				<div class="services__text">We believe that well-researched content is the cornerstone of effective communication. Our writers conduct thorough research on your industry, competitors, and target audience to deliver insightful and authoritative content that sets you apart as a leader in your field.</div>
 			</div>
 		</div>
 
@@ -80,17 +80,17 @@
 			<div class="services__item">
 				<div class="fas fa-feather services__icon"></div>
 
-				<div class="services__title">Comfort</div>
+				<div class="services__title">Fast Turnaround Time</div>
 
-				<div class="services__text">Our software features a user-friendly interface, even for beginners.</div>
+				<div class="services__text">We understand the importance of timely delivery, which is why we pride ourselves on our quick turnaround times. Whether you need a single blog post or a comprehensive content strategy, we'll work efficiently to meet your deadlines without compromising on quality.</div>
 			</div>
 
 			<div class="services__item">
 				<div class="fas fa-shield-virus services__icon"></div>
 
-				<div class="services__title">Secure</div>
+				<div class="services__title">Proofreading and Editing Services</div>
 
-				<div class="services__text">Our software is free from harmful code, ensuring your safety.</div>
+				<div class="services__text">Our commitment to quality extends beyond just writing. We provide comprehensive proofreading and editing services to ensure that your content is polished, error-free, and ready to impress your audience. </div>
 			</div>
 		</div>
 
@@ -100,19 +100,86 @@
 			<div class="services__item">
 				<div class="fas fa-palette services__icon"></div>
 
-				<div class="services__title">Design</div>
+				<div class="services__title">Responsive Customer Support</div>
 
-				<div class="services__text">Our software adheres to corporate and stylish design standards.</div>
+				<div class="services__text">We believe in providing exceptional customer service every step of the way. Our dedicated support team is always available to address your queries, provide assistance, and accommodate any special requests you may have. Whether you need clarification on project details, want to request revisions, we're here to ensure that your experience with our writing services is smooth, seamless, and hassle-free.</div>
 			</div>
 
 			<div class="services__item">
 				<div class="fas fa-user-shield services__icon"></div>
 
-				<div class="services__title">Personal</div>
+				<div class="services__title">Scalability and Flexibility</div>
 
-				<div class="services__text">We respect your privacy and do not collect your personal data.</div>
+				<div class="services__text">Whether you're a small startup or a large enterprise, our writing services are designed to scale alongside your business needs. Whether you require a one-off project or ongoing content support, we offer flexible solutions that can be tailored to accommodate your changing requirements. </div>
 			</div>
 
+		</div>
+	</div>
+</section>
+
+
+<section class="section" id="products">
+	<div class="container">
+		<div class="section__header">
+			<h2 class="section__title">Our Writing Services</h2>
+		</div>
+		
+		<div class="products">
+			<div class="products__item">
+				<div class="fas fa-dollar-sign products__icon"></div>
+
+				<a href="https://wa.link/whu3du"><div class="products__title">SteamPrices</div></a>
+
+				<div class="products__text">Program for getting current prices for Steam items.</div>
+			</div>
+
+			<div class="products__item">
+				<div class="fas fa-yen-sign products__icon"></div>
+
+				<a href="https://wa.link/whu3du"><div class="products__title">Buff163Prices</div></a>
+
+				<div class="products__text">Program for getting current prices for Buff163 items.</div>
+			</div>
+		</div>
+
+		<hr>
+
+		<div class="products">
+			<div class="products__item">
+				<div class="fas fa-comment products__icon"></div>
+
+				<a href="https://wa.link/whu3du"><div class="products__title">DynamicStatus</div></a>
+
+				<div class="products__text">Program for dynamic changing the status in VKontakte.</div>
+			</div>
+
+			<div class="products__item">
+				<div class="fas fa-shield-alt products__icon"></div>
+
+				<a href="https://wa.link/whu3du"><div class="products__title">Blocker</div></a>
+
+				<div class="products__text">Program for blocking, unblocking websites by using the hosts file.</div>
+			</div>
+		</div>
+
+		<hr>
+
+		<div class="products">
+			<div class="products__item">
+				<div class="fas fa-keyboard products__icon"></div>
+
+				<a href="https://wa.link/whu3du"><div class="products__title">KeyStrokes</div></a>
+
+				<div class="products__text">Program for visualizing the keys pressed by the user during the game.</div>
+			</div>
+
+			<div class="products__item">
+				<div class="fas fa-image products__icon"></div>
+
+				<a href="https://github.com/DeniedAccessLife/ScreenshotTool"><div class="products__title">ScreenshotTool</div></a>
+
+				<div class="products__text">Program for capturing minimalistic screenshots.</div>
+			</div>
 		</div>
 	</div>
 </section>
@@ -179,72 +246,6 @@
 						<div class="accordion__content">Yes, we offer regular software updates and patches. These updates are subject to agreement with our support team.</div>
 					</div>
 				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="section" id="products">
-	<div class="container">
-		<div class="section__header">
-			<h2 class="section__title">Products</h2>
-		</div>
-		
-		<div class="products">
-			<div class="products__item">
-				<div class="fas fa-dollar-sign products__icon"></div>
-
-				<a href="https://github.com/DeniedAccessLife/SteamPrices"><div class="products__title">SteamPrices</div></a>
-
-				<div class="products__text">Program for getting current prices for Steam items.</div>
-			</div>
-
-			<div class="products__item">
-				<div class="fas fa-yen-sign products__icon"></div>
-
-				<a href="https://github.com/DeniedAccessLife/Buff163Prices"><div class="products__title">Buff163Prices</div></a>
-
-				<div class="products__text">Program for getting current prices for Buff163 items.</div>
-			</div>
-		</div>
-
-		<hr>
-
-		<div class="products">
-			<div class="products__item">
-				<div class="fas fa-comment products__icon"></div>
-
-				<a href="https://github.com/DeniedAccessLife/DynamicStatus"><div class="products__title">DynamicStatus</div></a>
-
-				<div class="products__text">Program for dynamic changing the status in VKontakte.</div>
-			</div>
-
-			<div class="products__item">
-				<div class="fas fa-shield-alt products__icon"></div>
-
-				<a href="https://github.com/DeniedAccessLife/Blocker"><div class="products__title">Blocker</div></a>
-
-				<div class="products__text">Program for blocking, unblocking websites by using the hosts file.</div>
-			</div>
-		</div>
-
-		<hr>
-
-		<div class="products">
-			<div class="products__item">
-				<div class="fas fa-keyboard products__icon"></div>
-
-				<a href="https://github.com/DeniedAccessLife/KeyStrokes"><div class="products__title">KeyStrokes</div></a>
-
-				<div class="products__text">Program for visualizing the keys pressed by the user during the game.</div>
-			</div>
-
-			<div class="products__item">
-				<div class="fas fa-image products__icon"></div>
-
-				<a href="https://github.com/DeniedAccessLife/ScreenshotTool"><div class="products__title">ScreenshotTool</div></a>
-
-				<div class="products__text">Program for capturing minimalistic screenshots.</div>
 			</div>
 		</div>
 	</div>
