--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
 		
 		<div class="products">
 			<div class="products__item">
-				<div class="fas fa-dollar-sign products__icon"></div>
+				<div class="fas fa-bolt services__icon"></div>
 
-				<a href="https://wa.link/whu3du"><div class="products__title">SteamPrices</div></a>
+				<a href="https://wa.link/whu3du"><div class="products__title">Assignment Writing Service</div></a>
 
-				<div class="products__text">Program for getting current prices for Steam items.</div>
+				<div class="products__text">Providing exceptional writing services for all assignment writing services.</div>
 			</div>
 
 			<div class="products__item">
 				<div class="fas fa-yen-sign products__icon"></div>
 
-				<a href="https://wa.link/whu3du"><div class="products__title">Buff163Prices</div></a>
+				<a href="https://wa.link/whu3du"><div class="products__title">Dissertation Writing Service</div></a>
 
-				<div class="products__text">Program for getting current prices for Buff163 items.</div>
+				<div class="products__text">Ai free human written contents.</div>
 			</div>
 		</div>
 
@@ -148,17 +148,17 @@
 			<div class="products__item">
 				<div class="fas fa-comment products__icon"></div>
 
-				<a href="https://wa.link/whu3du"><div class="products__title">DynamicStatus</div></a>
+				<a href="https://wa.link/whu3du"><div class="products__title">Thesis Writing Service</div></a>
 
-				<div class="products__text">Program for dynamic changing the status in VKontakte.</div>
+				<div class="products__text">Originality with less than 6% plagiarism guranteed.</div>
 			</div>
 
 			<div class="products__item">
 				<div class="fas fa-shield-alt products__icon"></div>
 
-				<a href="https://wa.link/whu3du"><div class="products__title">Blocker</div></a>
+				<a href="https://wa.link/whu3du"><div class="products__title">SOP, LOR, LOM</div></a>
 
-				<div class="products__text">Program for blocking, unblocking websites by using the hosts file.</div>
+				<div class="products__text">Providing writing services for academic helps.</div>
 			</div>
 		</div>
 
@@ -168,17 +168,17 @@
 			<div class="products__item">
 				<div class="fas fa-keyboard products__icon"></div>
 
-				<a href="https://wa.link/whu3du"><div class="products__title">KeyStrokes</div></a>
+				<a href="https://wa.link/whu3du"><div class="products__title">Business Writing Services</div></a>
 
-				<div class="products__text">Program for visualizing the keys pressed by the user during the game.</div>
+			<div class="products__text">Experienced and specialized writers.</div>
 			</div>
 
 			<div class="products__item">
 				<div class="fas fa-image products__icon"></div>
 
-				<a href="https://github.com/DeniedAccessLife/ScreenshotTool"><div class="products__title">ScreenshotTool</div></a>
+				<a href="https://github.com/DeniedAccessLife/ScreenshotTool"><div class="products__title">Website Content Writing Service</div></a>
 
-				<div class="products__text">Program for capturing minimalistic screenshots.</div>
+				<div class="products__text">From professionaly written blogs to case studies and SEO friendly content.</div>
 			</div>
 		</div>
 	</div>
@@ -195,55 +195,55 @@
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">Which versions of Windows does the software support?</div>
+							<div class="accordion__title">What types of writing services do you offer?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">The software supports all modern versions of the operating system, including support for Windows XP if requested.</div>
+						<div class="accordion__content">Word Chain Writers offers a wide range of writing services including academic writing, content writing, copywriting, editing, proofreading, and more.</div>
 					</div>
 				</div>
 
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">Are possible to solve software problems?</div>
+							<div class="accordion__title">Are your writers experienced professionals?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">In case of any issues with the software, our technical support team is ready to assist in resolving the problem as swiftly as possible.</div>
+						<div class="accordion__content">Yes, at Word Chain Writers, we pride ourselves on having a team of experienced professionals with expertise in various fields and industries.</div>
 					</div>
 				</div>
 				
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">What processor architecture does the software support?</div>
+							<div class="accordion__title">How do you ensure the quality of the writing?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">The software is designed to support all processor architectures, ensuring optimal performance across different systems.</div>
+						<div class="accordion__content">We ensure the highest quality of writing at Word Chain Writers through a rigorous screening process for our writers, comprehensive quality checks, and revisions to meet your satisfaction.</div>
 					</div>
 				</div>
 
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">How fast will software development progress?</div>
+							<div class="accordion__title">What is your process for placing an order?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">We prioritize efficiency in our software development process. As soon as we receive your order, we work diligently to deliver the software within the agreed-upon timeline.</div>
+						<div class="accordion__content">Placing an order at Word Chain Writers is simple! Just visit our website, fill out the order form with your requirements, and our team will promptly assist you through the process.</div>
 					</div>
 				</div>
 
 				<div class="accordion">
 					<div class="accordion__item">
 						<div class="accordion__header">
-							<div class="accordion__title">Are possible to anticipate and implement future software updates?</div>
+							<div class="accordion__title">Can I request revisions if needed?</div>
 							<div class="fas fa-circle cricle__icon"></div>
 						</div>
 
-						<div class="accordion__content">Yes, we offer regular software updates and patches. These updates are subject to agreement with our support team.</div>
+						<div class="accordion__content">Absolutely! We offer free revisions at Word Chain Writers to ensure that your writing meets your expectations and requirements.</div>
 					</div>
 				</div>
 			</div>
