--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 			<div class="products__item">
 				<div class="fas fa-image products__icon"></div>
 
-				<a href="https://github.com/DeniedAccessLife/ScreenshotTool"><div class="products__title">Website Content Writing Service</div></a>
+				<a href="https://wa.link/whu3du"><div class="products__title">Website Content Writing Service</div></a>
 
 				<div class="products__text">From professionaly written blogs to case studies and SEO friendly content.</div>
 			</div>
