--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 			<div class="services__item">
 				<div class="fas fa-feather services__icon"></div>
 
-				<div class="services__title">Fast Turnaround Time</div>
+				<div class="services__title">Transparent Pricing and Packages</div>
 
-				<div class="services__text">We understand the importance of timely delivery, which is why we pride ourselves on our quick turnaround times. Whether you need a single blog post or a comprehensive content strategy, we'll work efficiently to meet your deadlines without compromising on quality.</div>
+				<div class="services__text">We believe in transparency and simplicity when it comes to pricing. Our writing services offer clear and competitive pricing packages that outline the scope of work, deliverables, and costs upfront. We eliminate any hidden fees or surprises, allowing you to budget effectively and make informed decisions about your content marketing investments.</div>
 			</div>
 
 			<div class="services__item">
